# libeba

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac
demos/: sieve-of-eratosthenes.c
eba_test_arduino/: eba-arduino.cpp  eba-arduino.h  eba-test-private-utils.h  eba.cpp  eba.h  eba_test_arduino.ino  echeck-arduino.cpp  echeck-arduino.h  echeck.cpp  echeck.h  eembed-arduino.cpp  eembed-arduino.h  eembed.cpp  eembed.h  test-get-be.cpp  test-get-el.cpp  test-get.cpp  test-new.cpp  test-rotate.cpp  test-set-all.cpp  test-set.cpp  test-shift-fill.cpp  test-shift-left.cpp  test-shift-right.cpp  test-swap.cpp  test-to-string.cpp  test-toggle.cpp
misc/: pre-tidy.patch
src/: eba-arduino.cpp  eba-arduino.h  eba-internal.h  eba-log.c  eba-log.h  eba.c  eba.h
tests/: eba-test-private-utils.h  echeck.c  echeck.h  test-get-be.c  test-get-el.c  test-get.c  test-new.c  test-ring-shift.c  test-rotate.c  test-set-all.c  test-set.c  test-shift-fill.c  test-shift-left.c  test-shift-right.c  test-swap.c  test-to-string.c  test-toggle.c
